// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Smart checkout component with data should have match with snapshot 1`] = `
<div>
  <h2
    className="text-center pt-3"
  >
    some data
  </h2>
  <p
    className="text-center"
  >
    Some desc
  </p>
  <div
    className="sh-add-card d-flex pt-5 pb-5 p-3 justify-content-between"
  >
    <div>
      <div
        className="sh-h3"
      >
        ADD NEW
      </div>
      <div
        className="text-uppercase"
      >
        BILLING ADDRESS
      </div>
    </div>
    <div
      className="pt-4"
    >
      <Icon
        iconname="icon-add-active"
      />
    </div>
  </div>
  <div
    className="sh-actions d-flex mt-5 justify-content-between pt-2 pb-2"
  >
    <div
      className="pt-2 pb-2"
    >
      <button
        className="btn btn-outline-primary pl-5 pr-5 text-uppercase"
        type="button"
      >
        back
      </button>
    </div>
    <div
      className="pt-2 pb-2"
    >
      <button
        className="btn btn-primary pl-5 pr-5 text-uppercase"
        type="button"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Smart checkout component with out data should have match with snapshot 1`] = `
<div>
  <h2
    className="text-center pt-3"
  />
  <p
    className="text-center"
  />
  <div
    className="sh-add-card d-flex pt-5 pb-5 p-3 justify-content-between"
  >
    <div>
      <div
        className="sh-h3"
      >
        ADD NEW
      </div>
      <div
        className="text-uppercase"
      >
        BILLING ADDRESS
      </div>
    </div>
    <div
      className="pt-4"
    >
      <Icon
        iconname="icon-add-active"
      />
    </div>
  </div>
  <div
    className="sh-actions d-flex mt-5 justify-content-between pt-2 pb-2"
  >
    <div
      className="pt-2 pb-2"
    >
      <button
        className="btn btn-outline-primary pl-5 pr-5 text-uppercase"
        type="button"
      />
    </div>
    <div
      className="pt-2 pb-2"
    >
      <button
        className="btn btn-primary pl-5 pr-5 text-uppercase"
        type="button"
      />
    </div>
  </div>
</div>
`;
